--- a/diabetes_no_IQR.ipynb
+++ b/diabetes_no_IQR.ipynb
@@ -17,17 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "26219441",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "pd.set_option('display.max_rows', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "183fcd7c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "70d69692",
    "metadata": {},
    "outputs": [
@@ -139,17 +140,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Pregnancies  Glucose  BloodPressure  ...  DiabetesPedigreeFunction  Age  Outcome\n",
-       "0            6      148             72  ...                     0.627   50        1\n",
-       "1            1       85             66  ...                     0.351   31        0\n",
-       "2            8      183             64  ...                     0.672   32        1\n",
-       "3            1       89             66  ...                     0.167   21        0\n",
-       "4            0      137             40  ...                     2.288   33        1\n",
+       "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+       "0            6      148             72             35        0  33.6   \n",
+       "1            1       85             66             29        0  26.6   \n",
+       "2            8      183             64              0        0  23.3   \n",
+       "3            1       89             66             23       94  28.1   \n",
+       "4            0      137             40             35      168  43.1   \n",
        "\n",
-       "[5 rows x 9 columns]"
+       "   DiabetesPedigreeFunction  Age  Outcome  \n",
+       "0                     0.627   50        1  \n",
+       "1                     0.351   31        0  \n",
+       "2                     0.672   32        1  \n",
+       "3                     0.167   21        0  \n",
+       "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +166,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
+   "id": "7c5c1fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.7</td>\n",
+       "      <td>0.140</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "      <td>27.7</td>\n",
+       "      <td>0.299</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.389</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.346</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0.727</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+       "75             1        0             48             20        0  24.7   \n",
+       "182            1        0             74             20       23  27.7   \n",
+       "342            1        0             68             35        0  32.0   \n",
+       "349            5        0             80             32        0  41.0   \n",
+       "502            6        0             68             41        0  39.0   \n",
+       "\n",
+       "     DiabetesPedigreeFunction  Age  Outcome  \n",
+       "75                      0.140   22        0  \n",
+       "182                     0.299   21        0  \n",
+       "342                     0.389   22        0  \n",
+       "349                     0.346   37        1  \n",
+       "502                     0.727   41        1  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Glucose'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e2bb2ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35, 9)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['BloodPressure'] == 0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fd8ca246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(227, 9)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['SkinThickness'] == 0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3544445d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(374, 9)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Insulin'] == 0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e3f9b212",
    "metadata": {},
    "outputs": [],
@@ -171,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "a71be9e2",
    "metadata": {},
    "outputs": [],
@@ -181,18 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "80d8e7b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
-    "X = scaler.fit_transform(X)"
+    "scaler = StandardScaler()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "457d739d",
    "metadata": {},
    "outputs": [],
@@ -202,12 +398,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "80a5c949",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state= 42, test_size= 0.2, stratify= y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "68f0e4e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
    ]
   },
   {
@@ -220,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "3f7568ec",
    "metadata": {},
    "outputs": [],
@@ -230,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "6d464d27",
    "metadata": {},
    "outputs": [],
@@ -240,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "62f9c2fb",
    "metadata": {},
    "outputs": [],
@@ -250,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "9b0182e3",
    "metadata": {},
    "outputs": [
@@ -260,12 +467,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.76      0.80      0.78       100\n",
-      "           1       0.59      0.54      0.56        54\n",
+      "           0       0.75      0.80      0.78       100\n",
+      "           1       0.58      0.52      0.55        54\n",
       "\n",
-      "    accuracy                           0.71       154\n",
-      "   macro avg       0.68      0.67      0.67       154\n",
-      "weighted avg       0.70      0.71      0.70       154\n",
+      "    accuracy                           0.70       154\n",
+      "   macro avg       0.67      0.66      0.66       154\n",
+      "weighted avg       0.69      0.70      0.70       154\n",
       "\n"
      ]
     }
@@ -286,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "a3e704ce",
    "metadata": {},
    "outputs": [
@@ -297,12 +504,12 @@
       "Best param:  {'metric': 'euclidean', 'n_neighbors': 9, 'weights': 'uniform'}\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.83      0.80       100\n",
-      "           1       0.63      0.54      0.58        54\n",
+      "           0       0.78      0.83      0.80       100\n",
+      "           1       0.64      0.56      0.59        54\n",
       "\n",
       "    accuracy                           0.73       154\n",
-      "   macro avg       0.70      0.68      0.69       154\n",
-      "weighted avg       0.72      0.73      0.72       154\n",
+      "   macro avg       0.71      0.69      0.70       154\n",
+      "weighted avg       0.73      0.73      0.73       154\n",
       "\n"
      ]
     }
@@ -340,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "9de1a784",
    "metadata": {},
    "outputs": [
@@ -378,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "a875f860",
    "metadata": {},
    "outputs": [
@@ -386,7 +593,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best param:  {'criterion': 'entropy', 'max_depth': 5}\n",
+      "best param:  {'criterion': 'log_loss', 'max_depth': 5}\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.85      0.83      0.84       100\n",
@@ -430,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "b16ce2f9",
    "metadata": {},
    "outputs": [
@@ -440,12 +647,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.81      0.81       100\n",
-      "           1       0.64      0.63      0.64        54\n",
+      "           0       0.77      0.82      0.79       100\n",
+      "           1       0.62      0.54      0.57        54\n",
       "\n",
-      "    accuracy                           0.75       154\n",
-      "   macro avg       0.72      0.72      0.72       154\n",
-      "weighted avg       0.75      0.75      0.75       154\n",
+      "    accuracy                           0.72       154\n",
+      "   macro avg       0.69      0.68      0.68       154\n",
+      "weighted avg       0.71      0.72      0.72       154\n",
       "\n"
      ]
     }
@@ -468,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "7f95d448",
    "metadata": {},
    "outputs": [
@@ -476,7 +683,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best param:  {'criterion': 'gini', 'n_estimators': 150}\n",
+      "best param:  {'criterion': 'entropy', 'n_estimators': 100}\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.85      0.83      0.84       100\n",
